--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,15 +7,14 @@
 
 
    <!-- Only this application can receive the messages and registration result --> 
-   <permission android:name="eu.grigis.gaetan.rc.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-   <uses-permission android:name="eu.grigis.gaetan.rc.permission.C2D_MESSAGE" />
-
-   <!-- This app has permission to register and receive message -->
-   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
-   <!-- Send the registration id to the server -->
-   <uses-permission android:name="android.permission.INTERNET" />
+	<permission android:name="eu.grigis.gaetan.rc.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<uses-permission android:name="eu.grigis.gaetan.rc.permission.C2D_MESSAGE" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".RCMain"
@@ -25,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		<activity android:label="@string/app_name" android:name=".EditPreferences"></activity>
 
 		<service android:name=".C2DMReceiver" />
 		<!-- Only C2DM servers can send messages for the app. If permission is 
